# python-lab-automation-tutorial

./: 404.html  CLAUDE.md  Makefile  README.md  generate_docs.py  index.html  main.py  mkdocs.yml  objects.inv  pyproject.toml  sitemap.xml
.github/workflows/: main.yml
about/: index.html
customization/: index.html
docs/: README.md  about.md  customization.md  index.md  quickstart.md  robot arm.md  usecases.md  wrappers.md
docs/laborchestrator/: README.md  api-reference.md  configuration.md  deployment.md  getting-started.md  index.md  sila-integration.md  writing-processes.md
docs/platform-status-db/: advanced-usage.md  api-reference.md  getting-started.md  index.md  managing-containers.md  managing-devices.md
docs/pythonlab/: api_reference.md  builtin_services.md  examples.md  introduction.md  processes_quickstart.md  workflow_graph.md  writing_processes.md
docs/stylesheets/: extra.css
lab configuration/: index.html
laborchestrator/: index.html
laborchestrator/api-reference/: index.html
laborchestrator/configuration/: index.html
laborchestrator/deployment/: index.html
laborchestrator/getting-started/: index.html
laborchestrator/sila-integration/: index.html
laborchestrator/writing-processes/: index.html
platform-status-db/: index.html
platform-status-db/advanced-usage/: index.html
platform-status-db/api-reference/: index.html
pythonlab/: index.html
quickstart/: index.html
robot arm/: index.html
search/: search_index.json
templates/: api_reference.md.jinja2
usecases/: index.html
wrappers/: index.html
(+11 files in other folders)
