[project]
name = "lara-tutorial"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "mkdocs>=1.6.1",
    "mkdocs-glightbox>=0.5.1",
    "mkdocs-material>=9.6.22",
    "mkdocs-mermaid2-plugin>=1.2.3",
    "mkdocs-panzoom-plugin>=0.4.2",
    "pygments>=2.19.2",
    "pymdown-extensions>=10.16.1",
]
